--- a/pom.xml
+++ b/pom.xml
@@ -2,20 +2,39 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
-    <groupId>net.topflow</groupId>
-    <artifactId>mybatisDemo</artifactId>
-    <packaging>war</packaging>
+    <groupId>com.example</groupId>
+    <artifactId>demo-mybatis</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
 
-    <dependencies>
-        <!-- 单元测试 -->
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-        </dependency>
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.0.1.RELEASE</version>
+    </parent>
 
-        <!-- 日志 -->
+    <modules>
+        <module>mybatis</module>
+        <module>mybatis-generator</module>
+        <module>mybatis-spring</module>
+        <module>mybatis-tk</module>
+        <module>mybatis-springboot</module>
+    </modules>
+
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.compilerVersion>1.8</maven.compiler.compilerVersion>
+        <jdk.version>1.8</jdk.version>
+        <mybatis.version>3.4.6</mybatis.version>
+        <tkMybatis.mapper.version>4.0.3</tkMybatis.mapper.version>
+        <tkMybatis.pagehelper.version>5.1.4</tkMybatis.pagehelper.version>
+        <mysql.version>5.1.29</mysql.version>
+        <spring.version>5.0.5.RELEASE</spring.version>
+        <mybatis.spring.version>1.3.2</mybatis.spring.version>
+    </properties>
+
+    <dependencies>
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
@@ -26,51 +45,25 @@
             <artifactId>slf4j-log4j12</artifactId>
             <version>1.7.25</version>
         </dependency>
-
-        <!-- Spring组件 -->
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-core</artifactId>
-            <version>${spring.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-webmvc</artifactId>
-            <version>${spring.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-jdbc</artifactId>
-            <version>${spring.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-orm</artifactId>
-            <version>${spring.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-test</artifactId>
-            <version>${spring.version}</version>
-        </dependency>
-
-        <!-- Druid数据源 -->
         <dependency>
             <groupId>com.alibaba</groupId>
-            <artifactId>druid</artifactId>
-            <version>1.0.11</version>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.60</version>
         </dependency>
-
-        <!-- MyBatis组件 -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
         <dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis</artifactId>
             <version>${mybatis.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.mybatis</groupId>
-            <artifactId>mybatis-spring</artifactId>
-            <version>${mybatis.spring.version}</version>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>1.1.20</version>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
@@ -79,15 +72,4 @@
         </dependency>
     </dependencies>
 
-    <properties>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-        <maven.compiler.compilerVersion>1.8</maven.compiler.compilerVersion>
-        <project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
-        <jdk.version>1.8</jdk.version>
-        <mybatis.version>3.3.1</mybatis.version>
-        <mysql.version>5.1.29</mysql.version>
-        <spring.version>4.1.2.RELEASE</spring.version>
-        <mybatis.spring.version>1.2.4</mybatis.spring.version>
-    </properties>
 </project>
