--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,8 @@
         <mybatis.version>3.4.6</mybatis.version>
         <tkMybatis.mapper.version>4.0.3</tkMybatis.mapper.version>
         <tkMybatis.pagehelper.version>5.1.4</tkMybatis.pagehelper.version>
-        <mysql.version>5.1.29</mysql.version>
+        <mysql.version>8.0.16</mysql.version>
+<!--        <mysql.version>5.1.29</mysql.version>-->
         <spring.version>5.0.5.RELEASE</spring.version>
         <mybatis.spring.version>1.3.2</mybatis.spring.version>
     </properties>
@@ -44,6 +45,11 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
             <version>1.7.25</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging-api</artifactId>
+            <version>1.1</version>
         </dependency>
         <dependency>
             <groupId>com.alibaba</groupId>
@@ -71,9 +77,19 @@
             <version>${mysql.version}</version>
         </dependency>
         <dependency>
+            <groupId>ru.yandex.clickhouse</groupId>
+            <artifactId>clickhouse-jdbc</artifactId>
+            <version>0.2.4</version>
+        </dependency>
+        <dependency>
+            <groupId>com.oracle</groupId>
+            <artifactId>ojdbc6</artifactId>
+            <version>11.2.0.3</version>
+        </dependency>
+        <dependency>
             <groupId>com.microsoft.sqlserver</groupId>
             <artifactId>mssql-jdbc</artifactId>
-            <version>8.4.0.jre8</version>
+            <version>8.2.2.jre8</version>
         </dependency>
     </dependencies>
 
